--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -6,26 +6,59 @@
     <data>
 
     </data>
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ScrollView
+                android:id="@+id/weatherLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:overScrollMode="never"
+                android:scrollbars="none"
+                android:visibility="invisible">
 
-    <ScrollView
-        android:id="@+id/weatherLayout"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <include
+                        android:id="@+id/nowLayout"
+                        layout="@layout/now" />
+
+                    <include
+                        android:id="@+id/forecastLayout"
+                        layout="@layout/forecast" />
+
+                    <include
+                        android:id="@+id/lifeIndexLayout"
+                        layout="@layout/life_index" />
+                </LinearLayout>
+            </ScrollView>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none"
-        android:overScrollMode="never"
-        android:visibility="invisible">
-
-        <LinearLayout
-            android:orientation="vertical"
+        android:clickable="true"
+        android:focusable="true"
+        android:layout_gravity="start"
+        android:background="@color/colorPrimary">
+        <fragment
+            android:id="@+id/placeFragment"
+            android:name="com.sunnyweather.android.ui.place.PlaceFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:layout_marginTop="25dp" />
+    </FrameLayout>
+    </androidx.drawerlayout.widget.DrawerLayout>
 
-            <include layout="@layout/now"
-                android:id="@+id/nowLayout"/>
-            <include layout="@layout/forecast"
-                android:id="@+id/forecastLayout"/>
-            <include layout="@layout/life_index"
-                android:id="@+id/lifeIndexLayout"/>
-        </LinearLayout>
-    </ScrollView>
+
+
+
 </layout>
